# CodexTestRepository

./: .gitignore  README.md  pyproject.toml
src/codex_demo/: __init__.py  cli.py  fibonacci.py  text.py
tests/: test_cli.py  test_fibonacci.py  test_text.py
