[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-demo"
version = "0.1.0"
description = "Demo-Projekt zur Illustration von Codex-Funktionen"
readme = "README.md"
authors = [
    { name = "Codex", email = "codex@example.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "click>=8.0"
]

[project.scripts]
codex-demo = "codex_demo.cli:main"
